--- a/config/database.yml
+++ b/config/database.yml
@@ -14,20 +14,20 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password: sv32rQ9jQA
+  password: 0009
   host: localhost
   #socket: /Applications/XAMPP/xamppfiles/var/mysql/mysql.sock
 
 development:
   <<: *default
-  database: camion2
+  database: tucamion_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: tucarro2_test
+  database: tucarro_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -50,6 +50,6 @@ test:
 #
 production:
   <<: *default
-  database: camion2
+  database: tucamion_production
   username: root
   password: sv32rQ9jQA
