se elimina el gemfile

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 
 # Ignore all logfiles and tempfiles.
 /Gemfile.lock.windows
+/Gemfile.lock.linux
+/Gemfile.lock
 /log/*.log
 /tmp
 /config/database.yml
